# Linkedin-cli-mcp

./: .gitignore  README.md  login.bat  package.bat  pyproject.toml  requirements.txt  scan.bat  setup.bat
scanner/: cli.py  config.py  db.py  linkedin.py  xlsx_parser.py
tests/: test_anti_detection.py  test_fixture.xlsx  test_xlsx_parser.py
