[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "linkedin-cli"
version = "0.2.0"
description = "Standalone LinkedIn post analytics scanner — extracts XLSX exports from LinkedIn analytics pages"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.48.0",
    "openpyxl>=3.1.0",
]

[project.scripts]
linkedin-cli = "scanner.cli:main"

[tool.setuptools.packages.find]
include = ["scanner*"]